--- a/students/rakel_vella/index.html
+++ b/students/rakel_vella/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Local CSS -->
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../../individualpage.css">
@@ -20,9 +21,11 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-6">
-        <a class="navbar-brand" href="../../group_page.html"> <img src="../../logo/Logo_Green-1.png" width="50" height="50" alt=""> </a>
+        <a class="navbar-brand" href="../../group_page.html"> <img src="../../logo/Logo_Green-1.png" width="50"
+                height="50" alt=""> </a>
         <!-- Collapse button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15" aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
+            aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
         <!-- Collapsible content -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent15">
@@ -188,22 +191,32 @@
     <!-- Portfolio Item Row -->
     <div class="container-fluid">
         <div class="row">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="col-md-7 d-flex align-items-center justify-content-center main-image">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/a219cU0m24Y" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div data-aos="zoom-in" data-aos-duration="1000"
+                class="col-md-7 d-flex align-items-center justify-content-center"> 
+                <img class="img-fluid"
+                    src="images/main_image.png" alt="MAIN PROJECT IMAGE"> 
                 </div>
-            </div>
             <div class="col-md-5 project-info col-xl-4">
                 <div class="row">
-                    <div class="col d-flex align-items-center justify-content-around"> <img class="img-fluid rounded-circle profile_picture" src="images/profile_picture.png" alt="PERSONAL IMAGE">
+                    <div class="col d-flex align-items-center justify-content-around"> <img
+                            class="img-fluid rounded-circle profile_picture" src="images/profile_picture.png"
+                            alt="PERSONAL IMAGE">
                         <h3>Rakel Vella</h3>
                     </div>
                 </div>
                 <h2>The Glass Box</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis
-                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat,
-                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis
-                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
+                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
+                    Mauris ultricies, justo eu convallis placerat, felis
+                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
+                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
+                    Mauris ultricies, justo eu convallis placerat,
+                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
+                    gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec
+                    metus. Mauris ultricies, justo eu convallis
+                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
+                    odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum
+                    nec metus. Mauris ultricies, justo
                     eu convallis placerat, felis enim.</p>
                 <hr>
                 <!-- External links to social media/websites/etc-->
@@ -220,7 +233,8 @@
     <div data-aos="fade-up" class="container-fluid container-3">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
-                <a href="https://r4k.buzz/dump-your-data.html" target="_blank"> <img class="img-fluid" src="images/livestream.png" alt=""> </a>
+                <a href="https://r4k.buzz/dump-your-data.html" target="_blank"> <img class="img-fluid"
+                        src="images/livestream.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4">
                 <img class="img-fluid" src="images/V_6.png" alt="">
@@ -238,7 +252,10 @@
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/a219cU0m24Y" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/a219cU0m24Y" frameborder="1"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
@@ -284,9 +301,15 @@
         }
     </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js "
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n "
+        crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js "
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo "
+        crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js "
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 "
+        crossorigin="anonymous "></script>
 </body>
 
 </html>
