project titles changes

--- a/group_page.html
+++ b/group_page.html
@@ -266,7 +266,7 @@
                     <div class="piece_text">
                         <h6>Degiorgio Maria</h6>
                         <div class="title_of_piece">
-                            <h5>Restoring the Maltese Cultural Identity through Product Design</h5>
+                            <h5>Pastizzi Artifect</h5>
                         </div>
                     </div>
                 </a>
@@ -416,7 +416,7 @@
                     <div class="piece_text">
                         <h6>Kaehler Lisa Marie</h6>
                         <div class="title_of_piece">
-                            <h5>Creating an Appealing Audiovisual Advert through the Art of Stop Motion Animation</h5>
+                            <h5>Coffee Stars: A Stop Motion Animation Advert</h5>
                         </div>
                     </div>
                 </a>
