--- a/students/test/index.html
+++ b/students/test/index.html
@@ -88,7 +88,7 @@
             </a>
             <a href="../../students/maria_degiorgio/index.html">
                 <h6>Degiorgio Maria</h6>
-                <p>Restoring the Maltese Cultural Identity through Product Design</p>
+                <p>Pastizzi Artifect</p>
             </a>
             <a href="../../students/francesca_falzon/index.html">
                 <h6>Falzon Francesca</h6>
@@ -124,7 +124,7 @@
             </a>
             <a href="../../students/lisa_kaehler_m/index.html">
                 <h6>Kaehler Lisa Marie</h6>
-                <p>Creating an Appealing Audiovisual Advert through the Art of Stop Motion Animation</p>
+                <p>Coffee Stars. A stop motion animation advert</p>
             </a>
             <a href="../../students/sergio_laferla/index.html">
                 <h6>Laferla Sergio</h6>
