--- a/group_page.html
+++ b/group_page.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container-fluid container-1">
         <div>
             <h1 class="title">BFA CTRL Z</h1>
         </div>
