--- a/students/luke_calleja/index.html
+++ b/students/luke_calleja/index.html
@@ -15,7 +15,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
     <!--Change student name here-->
-    <title>Student Name | CTRL Z</title>
+    <title>Luke Calleja | CTRL Z</title>
 </head>
 
 <body>
@@ -221,7 +221,7 @@
                         <!-- PERSONAL IMAGE, crop your exhibition photo and insert here-->
                         <img class="img-fluid rounded-circle profile_picture" src="http://placehold.it/150x150" alt="PERSONAL IMAGE">
                         <!--Change your name and surname here-->
-                        <h3>Name Surname</h3>
+                        <h3>Luke Calleja</h3>
                     </div>
                 </div>
                 <!--Change your project name here-->
