--- a/students/luke_calleja/index.html
+++ b/students/luke_calleja/index.html
@@ -219,7 +219,7 @@
                 <div class="row">
                     <div class="col d-flex align-items-center justify-content-around">
                         <!-- PERSONAL IMAGE, crop your exhibition photo and insert here-->
-                        <img class="img-fluid rounded-circle profile_picture" src="http://placehold.it/150x150" alt="PERSONAL IMAGE">
+                        <img class="img-fluid rounded-circle profile_picture" src="150x150.png" alt="PERSONAL IMAGE">
                         <!--Change your name and surname here-->
                         <h3>Luke Calleja</h3>
                     </div>
