--- a/students/luke_calleja/index.html
+++ b/students/luke_calleja/index.html
@@ -227,11 +227,7 @@
                 <!--Change your project name here-->
                 <h2>Surviving the War: An Interpretation of the Will of a Disappearing Generation</h2>
                 <!--Change you project description here, max 150 words-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis
-                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat,
-                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis
-                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo
-                    eu convallis placerat, felis enim.</p>
+                <p>Surviving the War: An Interpretation of the Will of A Disappearing Generation is a metaphorical visual representation of life during the war with particular focus on the emotional, mental and physical turmoil felt by the people of Malta together with the solace found in religion. Ultimately, it seeks to provide the viewer with a better understanding of what the people of Malta experienced between 1940 and 1942. </p>
                 <hr>
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
