--- a/students/vincianne_scerri/index.html
+++ b/students/vincianne_scerri/index.html
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <!--Change your project name here-->
-                <h2>Project Name</h2>
+                <h2>Let's Find Freshwater Crabs!</h2>
                 <!--Change you project description here, max 150 words-->
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis
                     enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat,
