--- a/students/luke_calleja/index.html
+++ b/students/luke_calleja/index.html
@@ -213,7 +213,9 @@
                 1by1
             
             -->
-                <img class="img-fluid" src="http://placehold.it/500x500" alt="MAIN PROJECT IMAGE">
+                 <div class="embed-responsive embed-responsive-16by9">
+                   <iframe width="560" height="315" src="https://www.youtube.com/embed/jKewH_tiZr0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
             <div class="col-md-5 project-info col-xl-4">
                 <div class="row">
