--- a/students/luke_calleja/index.html
+++ b/students/luke_calleja/index.html
@@ -229,7 +229,8 @@
                 <!--Change your project name here-->
                 <h2>Surviving the War: An Interpretation of the Will of a Disappearing Generation</h2>
                 <!--Change you project description here, max 150 words-->
-                <p>Surviving the War: An Interpretation of the Will of A Disappearing Generation is a metaphorical visual representation of life during the war with particular focus on the emotional, mental and physical turmoil felt by the people of Malta together with the solace found in religion. Ultimately, it seeks to provide the viewer with a better understanding of what the people of Malta experienced between 1940 and 1942. </p>
+                <p>Surviving the War: An Interpretation of the Will of A Disappearing Generation is a metaphorical visual representation of life during the war with particular focus on the emotional, mental and physical turmoil felt by the people of Malta together with the solace found in religion. Ultimately, it seeks to provide the viewer with a better understanding of what the people of Malta experienced between 1940 and 1942. The funeral bell sound thath could be heard in this animation is a constant reminder of death that was a normality during WWII.
+                For this video headphones are recommended</p>
                 <hr>
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
