--- a/students/luke_calleja/index.html
+++ b/students/luke_calleja/index.html
@@ -266,30 +266,21 @@
     <div data-aos="fade-up" class="container-fluid container-3">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/200x300" alt=""> </a>
+                 <img class="img-fluid" src="http://placehold.it/500x300" alt=""> 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a>
+                <img class="img-fluid" src="http://placehold.it/500x300" alt=""> 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/300x300" alt=""> </a>
-            </div>
-            <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a>
+                 <img class="img-fluid" src="http://placehold.it/500x300" alt=""> 
             </div>
         </div>
         <div class="row d-flex align-items-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x400" alt=""> </a>
+                <img class="img-fluid" src="http://placehold.it/500x400" alt=""> 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/600x300" alt=""> </a>
-            </div>
-            <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/400x500" alt=""> </a>
-            </div>
-            <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/600x600" alt=""> </a>
+                 <img class="img-fluid" src="http://placehold.it/600x600" alt=""> 
             </div>
         </div>
     </div>
