--- a/students/luke_calleja/index.html
+++ b/students/luke_calleja/index.html
@@ -266,7 +266,7 @@
     <div data-aos="fade-up" class="container-fluid container-3">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                 <img class="img-fluid" src="500x300no.1" alt=""> 
+                 <img class="img-fluid" src="500x300n.1.png" alt=""> 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <img class="img-fluid" src="http://placehold.it/500x300" alt=""> 
