--- a/students/luke_calleja/index.html
+++ b/students/luke_calleja/index.html
@@ -269,18 +269,18 @@
                  <img class="img-fluid" src="500x300n.1.png" alt=""> 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" src="http://placehold.it/500x300" alt=""> 
+                <img class="img-fluid" src="500x300no1.png" alt=""> 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                 <img class="img-fluid" src="http://placehold.it/500x300" alt=""> 
+                 <img class="img-fluid" src="http://placehold.it/600x300" alt=""> 
             </div>
         </div>
         <div class="row d-flex align-items-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <img class="img-fluid" src="http://placehold.it/500x400" alt=""> 
+                <img class="img-fluid" src="500s400no.1.png" alt=""> 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                 <img class="img-fluid" src="http://placehold.it/600x600" alt=""> 
+                 <img class="img-fluid" src="600x600no.1.png" alt=""> 
             </div>
         </div>
     </div>
