--- a/students/luke_calleja/index.html
+++ b/students/luke_calleja/index.html
@@ -230,7 +230,7 @@
                 <h2>Surviving the War: An Interpretation of the Will of a Disappearing Generation</h2>
                 <!--Change you project description here, max 150 words-->
                 <p>Surviving the War: An Interpretation of the Will of A Disappearing Generation is a metaphorical visual representation of life during the war with particular focus on the emotional, mental and physical turmoil felt by the people of Malta together with the solace found in religion. Ultimately, it seeks to provide the viewer with a better understanding of what the people of Malta experienced between 1940 and 1942. The funeral bell sound that could be heard in this animation is a constant reminder of death that was a reality during WWII.
-                For this video headphones are recommended.</p>
+                To best experience this video, headphones are recommended.</p>
                 <hr>
                 <!-- External links to social media/websites/etc-->
             </div>
@@ -272,7 +272,7 @@
                 <img class="img-fluid" src="500x300no1.png" alt=""> 
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                 <img class="img-fluid" src="http://placehold.it/600x300" alt=""> 
+                 <img class="img-fluid" src="600x300no.1.png" alt=""> 
             </div>
         </div>
         <div class="row d-flex align-items-center">
