--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -221,7 +221,7 @@
                         <!-- PERSONAL IMAGE, crop your exhibition photo and insert here-->
                         <img class="img-fluid rounded-circle profile_picture" src="http://placehold.it/150x150" alt="PERSONAL IMAGE">
                         <!--Change your name and surname here-->
-                        <h3>Name Surname</h3>
+                        <h3>Jacob Saliba</h3>
                     </div>
                 </div>
                 <!--Change your project name here-->
