--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -227,11 +227,7 @@
                 <!--Change your project name here-->
                 <h2>Project Name</h2>
                 <!--Change you project description here, max 150 words-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis
-                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat,
-                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis
-                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo
-                    eu convallis placerat, felis enim.</p>
+                <p>‘Seeking Gesamtkunstwerk’ is a live AV performance which was built upon the principles of visual music perception and visual instrument building. The software-based audiovisual synthesiser enables the musician to create both musical and visual immersive live performances simultaneously, whilst reducing human response time errors and creating specific visual content for particular styles of music. This AV performance explores an abstract storyline about our human presences within earth and our greed within our fast lifestyles which lead us in unpleasant situations such as our environment, social behavior and economic oppression.</p>
                 <hr>
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
