--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -225,15 +225,15 @@
                     </div>
                 </div>
                 <!--Change your project name here-->
-                <h2>Project Name</h2>
+                <h2>Seeking Gesamtkunstwerk</h2>
                 <!--Change you project description here, max 150 words-->
                 <p>‘Seeking Gesamtkunstwerk’ is a live AV performance which was built upon the principles of visual music perception and visual instrument building. The software-based audiovisual synthesiser enables the musician to create both musical and visual immersive live performances simultaneously, whilst reducing human response time errors and creating specific visual content for particular styles of music. This AV performance explores an abstract storyline about our human presences within earth and our greed within our fast lifestyles which lead us in unpleasant situations such as our environment, social behavior and economic oppression.</p>
                 <hr>
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
                 <ul>
-                    <li><a href="https://www.youtube.com/watch?v=a219cU0m24Y" target="_blank">Youtube</a></li>
-                    <li><a href="https://r4k.buzz/dump-your-data.html" target="_blank">Artist's Website</a></li>
+                    <li><a href="https://www.youtube.com/channel/UC1bdiqO7pOhM1rKWzkPP0CA?view_as=subscriber" target="_blank">Youtube</a></li>
+                    <li><a href="https://www.jacobsalibamyk.com/homepage/home.html" target="_blank">Artist's Website</a></li>
                 </ul>
             </div>
         </div>
