--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -15,7 +15,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,400&display=swap" rel="stylesheet">
     <!--Change student name here-->
-    <title>Student Name | CTRL Z</title>
+    <title>Jacob Saliba | CTRL Z</title>
 </head>
 
 <body>
@@ -302,9 +302,9 @@
             <div class="container">
                 <div class="row d-flex">
                     <div class="col footer-social d-flex justify-content-center">
-                        <a href="https://www.facebook.com/exhibitionctrlz/" target="_blank"><i
+                        <a href="https://www.facebook.com/jacob.saliba.12" target="_blank"><i
                                 class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/ctrl.z.bfa/" target="_blank"><i
+                        <a href="https://www.instagram.com/saliba.jacob/?hl=en" target="_blank"><i
                                 class="fab fa-instagram"></i></a>
                     </div>
                 </div>
