--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -245,7 +245,7 @@
     optimize for web when saving to retain quality
     
     -videos should be uploaded to youtube and linked here by using Share>Embed
-    FOR VIDEOS <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> is replaced by
+    FOR VIDEOS <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt="https://www.youtube.com/watch?v=pJlcj9s6Qhw> </a> is replaced by
 
     <div class="embed-responsive embed-responsive-16by9">
                     *insert embed link from youtube/vimeo*
