--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -270,27 +270,27 @@
     <div data-aos="fade-up" class="container-fluid container-3">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/200x300" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="synth99.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="synth1313.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/300x300" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="synth44.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="synth1.1.png" alt=""> </a>
             </div>
         </div>
         <div class="row d-flex align-items-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x400" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="synth1212.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="#"> <img class="img-fluid" src="http://placehold.it/600x300" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/400x500" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="synth66.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="#"> <img class="img-fluid" src="http://placehold.it/600x600" alt=""> </a>
