--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -293,7 +293,7 @@
                 <a href="#"> <img class="img-fluid" src="synth66.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/600x600" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="synth7.png" alt=""> </a>
             </div>
         </div>
     </div>
