--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -270,13 +270,13 @@
     <div data-aos="fade-up" class="container-fluid container-3">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="synth99.png" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="synth3.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="#"> <img class="img-fluid" src="synth1313.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="synth44.png" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="progress-videos-3.gif" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="#"> <img class="img-fluid" src="synth1.1.png" alt=""> </a>
@@ -290,7 +290,7 @@
                 <a href="#"> <img class="img-fluid" src="progress-videos-2-.gif" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="synth66.png" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="synth44.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="#"> <img class="img-fluid" src="synth7.png" alt=""> </a>
