--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -276,7 +276,7 @@
                 <a href="#"> <img class="img-fluid" src="synth1313.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="progress-videos-3.gif" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="progress videos 3.gif" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="#"> <img class="img-fluid" src="synth1.1.png" alt=""> </a>
