--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -270,7 +270,7 @@
     <div data-aos="fade-up" class="container-fluid container-3">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g"> <img class="img-fluid" src="synth31.png" alt=""> </a>
+                <a href=""> <img class="img-fluid" src="synth31.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="#"> <img class="img-fluid" src="synth1313.png" alt=""> </a>
@@ -292,9 +292,8 @@
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="#"> <img class="img-fluid" src="synth44.png" alt=""> </a>
             </div>
-            <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="synth7.png" alt=""> </a>
-            </div>
+            <div class="embed-responsive embed-responsive- 1by1">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/06EuqHdEY_g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                </div>
         </div>
     </div>
 
