--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -292,9 +292,10 @@
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="#"> <img class="img-fluid" src="synth44.png" alt=""> </a>
             </div>
-            <div class="embed-responsive embed-responsive-4by3">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/06EuqHdEY_g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
+            <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
+                <a href="#"> <img class="img-fluid" src="synth66.png" alt=""> </a>
             </div>
+           
         </div>
     </div>
 
