--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -270,7 +270,7 @@
     <div data-aos="fade-up" class="container-fluid container-3">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href=""> <img class="img-fluid" src="synth31.png" alt=""> </a>
+                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g> <img class="img-fluid" src="synth31.png" target="_blank" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
                 <a href="#"> <img class="img-fluid" src="synth1313.png" alt=""> </a>
