--- a/students/jacob_saliba/index.html
+++ b/students/jacob_saliba/index.html
@@ -270,16 +270,16 @@
     <div data-aos="fade-up" class="container-fluid container-3">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g  target="_blank"> <img class="img-fluid" src="synth31.png" alt=""> </a>
+                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g"  target="_blank"> <img class="img-fluid" src="synth31.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="synth1313.png" alt=""> </a>
+                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g"  target="_blank"> <img class="img-fluid" src="synth1313.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="progress videos 3.gif" alt=""> </a>
+                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g"  target="_blank"> <img class="img-fluid" src="progress videos 3.gif" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="synth1.1.png" alt=""> </a>
+                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g"  target="_blank"> <img class="img-fluid" src="synth1.1.png" alt=""> </a>
             </div>
         </div>
         <div class="row d-flex align-items-center">
@@ -287,13 +287,13 @@
                 <a href="#"> <img class="img-fluid" src="synth1212.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="progress-videos-2-.gif" alt=""> </a>
+                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g"  target="_blank"> <img class="img-fluid" src="progress-videos-2-.gif" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="synth44.png" alt=""> </a>
+                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g"  target="_blank"> <img class="img-fluid" src="synth44.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex align-items-center">
-                <a href="#"> <img class="img-fluid" src="synth55.png" alt=""> </a>
+                <a href="https://www.youtube.com/watch?v=06EuqHdEY_g"  target="_blank"> <img class="img-fluid" src="synth55.png" alt=""> </a>
             </div>
            
         </div>
